edited assignment-...-list.html x4

--- a/templates/assignment/assignment-music-list.html
+++ b/templates/assignment/assignment-music-list.html
@@ -12,7 +12,7 @@
 {% if object_list %}
 
         <section id="catalogue">
-        <h1>List of Assignments</h1>
+        <h1 style="color:white;">List of Assignments</h1>
 
             {% for assignment in assignmentmusic_list %}
 
