added access functionality (test_func)- users cannot have cRUD functionalities on objects created by others

--- a/templates/book/books-list.html
+++ b/templates/book/books-list.html
@@ -13,6 +13,7 @@
 <body>
 
 <div id="box">
+{#book.add_book, change_ delete_ view_ user.has_perm('book.add_book')#}
 {% if perms.book.add_book %}
 <a href="{% url 'book create' %}">Add new book</a>
 {% endif %}
