profile details - profile pic to be edited

--- a/templates/auth/profile-details.html
+++ b/templates/auth/profile-details.html
@@ -21,6 +21,7 @@
                 <p><span class="description">School Grade: {{ profile.school_grade }}</span></p>
                 <p><span class="description">Personal Number: {{ profile.user.personal_number}}</span></p>
                 {% if profile.user.profile_picture %}
+                    #TODO: fix pic
                 <p><span class="description">Profile Picture: {{ profile.user.profile_picture}}</span></p>
                     {% else %}
                 <p><span class="description">Profile Picture: None</span></p>
