--- a/templates/403.html
+++ b/templates/403.html
@@ -4,10 +4,9 @@
 {% block page_content %}
 
     <div class="not-found">
-        <h1 style="color:whitesmoke;">
-            Sorry,<br> we could not find that page.
+        <h1 style="color: whitesmoke">
+            Sorry,<br> you do not have access to this page.
         </h1>
-
     </div>
 
 {% endblock %}
