--- a/templates/assignment/assignment-music-create.html
+++ b/templates/assignment/assignment-music-create.html
@@ -15,7 +15,7 @@
 <div id="box">
 
     <section id="create-page" class="auth">
-        <form method="post" action="{% url 'assignment music create' %}">
+        <form method="post" action="{% url 'assignment music create' %}" enctype="multipart/form-data">
             <div class="container">
                 {{ form }}
                 {% csrf_token %}
