--- a/templates/assignment/assignment-music-edit.html
+++ b/templates/assignment/assignment-music-edit.html
@@ -15,7 +15,7 @@
 <div id="box">
 
     <section id="create-page" class="auth">
-        <form method="post" action="{% url 'assignment music edit' pk=assignmentmusic.pk %}">
+        <form method="post" action="{% url 'assignment music edit' pk=assignmentmusic.pk %} enctype="multipart/form-data"">
             <div class="container">
 
                 <h1>Edit {{ assignmentmusic.assignment_name }} Assignment</h1>
