--- a/templates/assignment/assignment-cooking-delete.html
+++ b/templates/assignment/assignment-cooking-delete.html
@@ -1,22 +1,14 @@
+{% extends 'common/base.html' %}
 {% load static %}
-{% include 'common/base.html' %}
-<!DOCTYPE html>
-<html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{% static 'css/style.css'%}">
-    <title>Delete Assignment</title>
-</head>
-
+{% block page_content %}
     <section id="delete-page" class="auth">
         <form method="post" action="{% url 'assignment cooking delete' pk=assignmentcooking.pk %}">
             <div class="container">
 
                 <h1>Are you sure you want to delete your assignment: "{{ assignmentcooking.assignment_name }}"?</h1>
                     {{ form }}
-                    <input type="submit" value="Confirm">
+                    <input class="btn" type="submit" value="Confirm">
                 {% csrf_token %}
             </div>
         </form>
@@ -24,3 +16,4 @@
 
 
 </html>
+{% endblock %}
