--- a/templates/auth/profile-details.html
+++ b/templates/auth/profile-details.html
@@ -1,15 +1,7 @@
+{% extends 'common/base.html' %}
 {% load static %}
-{% include 'common/base.html' %}
-<!DOCTYPE html>
-<html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{%  static '/css/style.css'%}">
-    <title>Profile Details</title>
-</head>
-
+{% block page_content %}
 <body>
 <div id="box">
     <section id="car-details">
@@ -39,3 +31,6 @@
 </div>
 </body>
 </html>
+
+
+{% endblock %}
