--- a/templates/assignment/assignment-music-details.html
+++ b/templates/assignment/assignment-music-details.html
@@ -1,14 +1,7 @@
+{% extends 'common/base.html' %}
 {% load static %}
-{% include 'common/base.html' %}
-<!DOCTYPE html>
-<html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{%  static '/css/style.css'%}">
-    <title>Assignment Details</title>
-</head>
+{% block page_content %}
 
 <body>
 <div id="box">
@@ -37,4 +30,4 @@
 {% csrf_token %}
 </div>
 </body>
-</html>
+{% endblock %}
