--- a/templates/questions/answer-delete.html
+++ b/templates/questions/answer-delete.html
@@ -1,14 +1,7 @@
+{% extends 'common/base.html' %}
 {% load static %}
-{% include 'common/base.html' %}
-<!DOCTYPE html>
-<html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{% static 'css/style.css'%}">
-    <title>Delete Answer</title>
-</head>
+{% block page_content %}
 
     <section id="delete-page" class="auth">
         <form method="post" action="{% url 'delete answer' pk=answer.pk question_id=answer.to_question.pk  %}">
@@ -22,5 +15,4 @@
         </form>
     </section>
 
-
-</html>
+{% endblock %}
