--- a/templates/assignment/assignment-english-create.html
+++ b/templates/assignment/assignment-english-create.html
@@ -1,15 +1,7 @@
+{% extends 'common/base.html' %}
 {% load static %}
-{% include 'common/base.html' %}
 
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
-    <title>Create English Assignment</title>
-</head>
+{% block page_content %}
 
 <body>
 <div id="box">
@@ -28,5 +20,5 @@
     </section>
 </div>
 </body>
-</html>
+{% endblock %}
 
