--- a/templates/assignment/assignment-mathematics-list.html
+++ b/templates/assignment/assignment-mathematics-list.html
@@ -1,11 +1,7 @@
-{% include 'common/base.html' %}
+{% extends 'common/base.html' %}
+{% load static %}
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>List of assignments</title>
-</head>
+{% block page_content %}
 <body>
 
 
@@ -55,4 +51,4 @@
 </div>
 {% endif %}
 </body>
-</html>
+{% endblock %}
