--- a/templates/assignment/assignment-music-create.html
+++ b/templates/assignment/assignment-music-create.html
@@ -1,15 +1,7 @@
+{% extends 'common/base.html' %}
 {% load static %}
-{% include 'common/base.html' %}
 
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
-    <title>Create Music Assignment</title>
-</head>
+{% block page_content %}
 
 <body>
 <div id="box">
@@ -25,5 +17,6 @@
     </section>
 </div>
 </body>
-</html>
+
+{% endblock %}
 
