--- a/templates/questions/questions-delete.html
+++ b/templates/questions/questions-delete.html
@@ -1,14 +1,7 @@
+{% extends 'common/base.html' %}
 {% load static %}
-{% include 'common/base.html' %}
-<!DOCTYPE html>
-<html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{% static 'css/style.css'%}">
-    <title>Delete Question</title>
-</head>
+{% block page_content %}
 
     <section id="delete-page" class="auth">
         <form method="post" action="{% url 'question delete' pk=question.pk %}">
@@ -23,4 +16,4 @@
     </section>
 
 
-</html>
+{% endblock %}
